# myzstod

./: .gitignore  2_lcc_trainer.sh  contrastive.sh  copy_lcc.sh  dataprep.sh  delta_trainer.sh  denvironment.yml  dma_trainer.sh  environment.yml  gpt_finetune.py  inference.sh  lcc_trainer.sh  pyproject.toml  pyrightconfig.json  qenvironment.yml  t5_finetune.py  trainer.sh
GenTodPaper/: acl2023.aux  acl2023.bbl  acl2023.blg  acl2023.fdb_latexmk  acl2023.fls  acl2023.tex  custom.bib  experiments.tex  flairs.docx  flairs.sty  formatting-instructions-latex copy.tex  formatting-instructions-latex.aux  formatting-instructions-latex.bbl  formatting-instructions-latex.blg  formatting-instructions-latex.fdb_latexmk  formatting-instructions-latex.fls  formatting-instructions-latex.tex  methodology.tex  related_works.tex
config/: data_model_exploration.yaml  ds_config.json  ds_inference_config.json  ds_zero1.json  ds_zero_tod.json  model_size_calc.yaml  results_logger.yaml
cross/: gpt2_encoder.py  gpt2_with_cross_attention.py  schema_encoder.py
playground/: chatgpt_inference.py  complete_api.py  create_hostfile.py  dt5_tod.sh  gpt_finetune.py  launch_t5_tod.sh  mt5_tod.sh  slogan_generator.ipynb  t5_datamodule.py  t5_finetune.py  t5_tod.py  test_dm.py
probing/: probing_trainer.py
runners/: contrastive.sh  copy_lcc.sh  dma_trainer.sh  inference.sh  lcc_trainer.sh  mh_lcc_trainer.sh  my_inference.sh  nlg_data_prep.sh  pltrainer.sh  ptrainer.sh  trainer.sh
src/: base_datamodule.py  contrastive.py  contrastive_dataclasses.py  contrastive_datamodule.py  dstc_dataclasses.py  (+24 more)
(+341 files in other folders)
