[tool.poetry]
name = "zstod"
version = "0.1.0"
description = ""
authors = ["Adib Mosharrof <adib.mosharrof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
pathos = "^0.3.0"
pyhumps = "^3.8.0"
hydra-core = "^1.3.2"
matplotlib = "^3.7.1"
fuzzywuzzy = "^0.18.0"
evaluate = "^0.4.0"
dotmap = "^1.3.30"
dataclasses-json = "^0.5.7"
dataclass-csv = "^1.4.0"
transformers = {git = "https://github.com/huggingface/transformers.git", rev = "main"}
peft = {git = "https://github.com/huggingface/peft.git", rev = "main"}
wandb = "^0.14.0"
sentence-transformers = "^2.2.2"
seaborn = "^0.12.2"
numerize = "^0.12"
torchmetrics = "^0.11.4"
accelerate = "^0.18.0"
bitsandbytes = "^0.37.2"
loralib = "^0.1.1"
absl-py = "^1.4.0"
rouge-score = "^0.1.2"
sentencepiece = "^0.1.97"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
